--- a/SistemaLab.csproj
+++ b/SistemaLab.csproj
@@ -46,60 +46,60 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Administrador\AdminHorarios.cs">
+    <Compile Include="Presentacion\Administrador\AdminHorarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\AdminHorarios.Designer.cs">
+    <Compile Include="Presentacion\Administrador\AdminHorarios.Designer.cs">
       <DependentUpon>AdminHorarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administrador\AdminUsuarios.cs">
+    <Compile Include="Presentacion\Administrador\AdminUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\AdminUsuarios.Designer.cs">
+    <Compile Include="Presentacion\Administrador\AdminUsuarios.Designer.cs">
       <DependentUpon>AdminUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administrador\FrmHorario.cs">
+    <Compile Include="Presentacion\Administrador\FrmHorario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\FrmHorario.Designer.cs">
+    <Compile Include="Presentacion\Administrador\FrmHorario.Designer.cs">
       <DependentUpon>FrmHorario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administrador\FrmUsuario.cs">
+    <Compile Include="Presentacion\Administrador\FrmUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\FrmUsuario.Designer.cs">
+    <Compile Include="Presentacion\Administrador\FrmUsuario.Designer.cs">
       <DependentUpon>FrmUsuario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administrador\Imprimir.cs">
+    <Compile Include="Presentacion\Administrador\Imprimir.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\Imprimir.Designer.cs">
+    <Compile Include="Presentacion\Administrador\Imprimir.Designer.cs">
       <DependentUpon>Imprimir.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administrador\PrincipalAdmin.cs">
+    <Compile Include="Presentacion\Administrador\PrincipalAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Administrador\PrincipalAdmin.Designer.cs">
+    <Compile Include="Presentacion\Administrador\PrincipalAdmin.Designer.cs">
       <DependentUpon>PrincipalAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login\Login.cs">
+    <Compile Include="Presentacion\Login\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login\Login.Designer.cs">
+    <Compile Include="Presentacion\Login\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login\Program.cs" />
-    <Compile Include="Login\Protector.cs">
+    <Compile Include="Presentacion\Login\Program.cs" />
+    <Compile Include="Presentacion\Login\Protector.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login\Protector.Designer.cs">
+    <Compile Include="Presentacion\Login\Protector.Designer.cs">
       <DependentUpon>Protector.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuarios\PrincipalUsuarios.cs">
+    <Compile Include="Presentacion\Usuarios\PrincipalUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Usuarios\PrincipalUsuarios.Designer.cs">
+    <Compile Include="Presentacion\Usuarios\PrincipalUsuarios.Designer.cs">
       <DependentUpon>PrincipalUsuarios.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -111,7 +111,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Usuarios\PrincipalUsuarios.resx">
+    <EmbeddedResource Include="Presentacion\Usuarios\PrincipalUsuarios.resx">
       <DependentUpon>PrincipalUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
